--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  overflow-x: hidden;
+  overflow-x: hidden; 
   font-family: "Montserrat", sans-serif;
 }
 .search-field {
@@ -28,37 +28,43 @@ body {
 #all-products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  /* border: 1px solid black; */
+   /* border: 1px solid black;  */
+   grid-gap: 5px;
   text-align: center;
   width: 100%;
+  height: 500px;
   margin: auto;
   align-items: center;
   justify-content: center;
 }
 .single-product {
+  height: 400px;
+  border: 1px solid rgb(55, 180, 180);
   padding: 10px;
   transition: 0.6s;
 }
 .single-product:hover {
   box-shadow: 4px 4px 7px gray;
-  border-radius: 10px;
-  border: 1px solid cyan;
+  border-radius: 80px/40px 0px ;
+  border: 2px solid cyan;
 }
+
+
 .product-image {
   width: 150px;
   height: 150px;
 }
 .cart {
-  width: 350px;
-  /* border: 1px solid green; */
+  width: 370px;
+   border: 1px solid green; 
   padding: 10px;
-  box-shadow: 10px 10px 20px gray;
+  box-shadow: 7px 7px 10px gray;
   border-radius: 5px;
   margin-right: 30px;
   position: fixed;
 }
 .cart-main {
-  padding-right: 30px;
+  padding-right: 20px;
 }
 @media only screen and (max-width: 768px) {
   #all-products {
